WebCore/platform/win/TemporaryLinkStubs.cpp
@@ -165,7 +165,17 @@ void ContextMenuClientWin::downloadURL(KURL) { notImplemented(); }
 void ContextMenuClientWin::copyImageToClipboard(HitTestResult) { notImplemented(); }
 void ContextMenuClientWin::lookUpInDictionary(Frame*) { notImplemented(); }
 
+ContextMenuItem::ContextMenuItem(PlatformMenuItemDescription, ContextMenu*) { notImplemented(); }
+ContextMenuItem::ContextMenuItem(ContextMenu* parentMenu, ContextMenu* subMenu) { notImplemented(); }
+ContextMenuItem::ContextMenuItem(ContextMenuItemType type, ContextMenuAction action, const String& title, ContextMenu* parentMenu, ContextMenu* subMenu) { notImplemented(); }
 ContextMenuItem::~ContextMenuItem() { notImplemented(); }
+PlatformMenuItemDescription ContextMenuItem::platformDescription() const { notImplemented(); return m_platformDescription; }
+ContextMenuAction ContextMenuItem::action() const { notImplemented(); return ContextMenuItemTagNoAction; }
+void ContextMenuItem::setAction(ContextMenuAction action) { notImplemented(); }
+String ContextMenuItem::title() const { notImplemented(); return String(); }
+void ContextMenuItem::setTitle(String title) { notImplemented(); }
+PlatformMenuDescription ContextMenuItem::platformSubMenu() const { notImplemented(); return 0; }
+void ContextMenuItem::setSubMenu(ContextMenu* subMenu) { notImplemented(); }
 
 void DocumentLoader::setFrame(Frame*) { notImplemented(); }
 FrameLoader* DocumentLoader::frameLoader() const { notImplemented(); return m_frame->loader(); }
